--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         run: cargo test
 
   build:
+    needs: [check, release]
     permissions:
       contents: write
     runs-on: ${{ matrix.runner }}
